Fix home header heading color on mobile

--- a/src/site/_sass/_modules/_home-header.scss
+++ b/src/site/_sass/_modules/_home-header.scss
@@ -55,6 +55,7 @@
     @include small-only {
       @include type--xlarge(true);
       padding-top: $lineHeight*2;
+      @include color-inherit;
     }
 
     @include medium {
